// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualizedLocDetails renders 1`] = `
<LocPane
  loc={
    Object {
      "createdOn": "2023-10-10T10:25:18.546+02:00",
      "decisionOn": "2023-10-10T10:25:18.546+02:00",
      "description": "Description",
      "files": Array [],
      "id": UUID {
        "bytes": Array [
          147,
          99,
          195,
          214,
          209,
          7,
          66,
          26,
          164,
          75,
          133,
          199,
          250,
          176,
          184,
          67,
        ],
      },
      "issuers": Array [],
      "links": Array [],
      "locType": "Identity",
      "metadata": Array [],
      "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "requesterAddress": Object {
        "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "equals": [Function],
        "toKey": [Function],
        "type": "Polkadot",
      },
      "requesterLocId": undefined,
      "status": "OPEN",
      "verifiedIssuer": false,
    }
  }
>
  <LegalOfficerInstructions
    loc={
      Object {
        "createdOn": "2023-10-10T10:25:18.546+02:00",
        "decisionOn": "2023-10-10T10:25:18.546+02:00",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "issuers": Array [],
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "requesterLocId": undefined,
        "status": "OPEN",
        "verifiedIssuer": false,
      }
    }
    locState={
      Object {
        "isLogionData": [Function],
        "isLogionIdentity": [Function],
      }
    }
    protectionRequest={null}
  />
  <LocDetailsTab
    checkResult={
      Object {
        "result": "NONE",
      }
    }
    loc={
      Object {
        "createdOn": "2023-10-10T10:25:18.546+02:00",
        "decisionOn": "2023-10-10T10:25:18.546+02:00",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "issuers": Array [],
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "requesterLocId": undefined,
        "status": "OPEN",
        "verifiedIssuer": false,
      }
    }
    locItems={Array []}
    locState={
      Object {
        "isLogionData": [Function],
        "isLogionIdentity": [Function],
      }
    }
    viewer="LegalOfficer"
  />
  <VoidDisclaimer
    loc={
      Object {
        "createdOn": "2023-10-10T10:25:18.546+02:00",
        "decisionOn": "2023-10-10T10:25:18.546+02:00",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "issuers": Array [],
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "requesterLocId": undefined,
        "status": "OPEN",
        "verifiedIssuer": false,
      }
    }
  />
  <CertificateAndLimits
    isReadOnly={false}
    loc={
      Object {
        "createdOn": "2023-10-10T10:25:18.546+02:00",
        "decisionOn": "2023-10-10T10:25:18.546+02:00",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "issuers": Array [],
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "requesterLocId": undefined,
        "status": "OPEN",
        "verifiedIssuer": false,
      }
    }
    viewer="LegalOfficer"
  />
  <SupersedesDisclaimer
    loc={
      Object {
        "createdOn": "2023-10-10T10:25:18.546+02:00",
        "decisionOn": "2023-10-10T10:25:18.546+02:00",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "issuers": Array [],
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "requesterLocId": undefined,
        "status": "OPEN",
        "verifiedIssuer": false,
      }
    }
  />
  <CheckFileFrame
    checkResult="NONE"
    checkedItem="confidential document"
    context="Identity LOC"
  />
  <VoidFrame
    loc={
      Object {
        "createdOn": "2023-10-10T10:25:18.546+02:00",
        "decisionOn": "2023-10-10T10:25:18.546+02:00",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "issuers": Array [],
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "requesterLocId": undefined,
        "status": "OPEN",
        "verifiedIssuer": false,
      }
    }
  />
</LocPane>
`;

exports[`ContextualizedLocDetails renders empty 1`] = `
<LocPane
  loc={
    Object {
      "id": UUID {
        "bytes": Uint8Array [
          174,
          212,
          198,
          228,
          151,
          158,
          72,
          173,
          190,
          110,
          75,
          211,
          159,
          185,
          71,
          98,
        ],
      },
      "locType": "Identity",
      "requesterAddress": Object {
        "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "equals": [Function],
        "toKey": [Function],
        "type": "Polkadot",
      },
      "userIdentity": Object {
        "email": "john.doe@logion.network",
        "firstName": "John",
        "lastName": "Doe",
        "phoneNumber": "+1234",
      },
    }
  }
>
  <LegalOfficerInstructions
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    locState={
      Object {
        "isLogionData": [Function],
        "isLogionIdentity": [Function],
      }
    }
    protectionRequest={null}
  />
  <LocDetailsTab
    checkResult={
      Object {
        "result": "NONE",
      }
    }
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    locItems={Array []}
    locState={
      Object {
        "isLogionData": [Function],
        "isLogionIdentity": [Function],
      }
    }
    viewer="LegalOfficer"
  />
  <VoidDisclaimer
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
  />
  <CertificateAndLimits
    isReadOnly={false}
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    viewer="LegalOfficer"
  />
  <SupersedesDisclaimer
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": Object {
          "address": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
          "equals": [Function],
          "toKey": [Function],
          "type": "Polkadot",
        },
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
  />
  <CheckFileFrame
    checkResult="NONE"
    checkedItem="confidential document"
    context="Identity LOC"
  />
</LocPane>
`;
